force-app/main/default/objects/OrderSummaryRoutingSchedule/fields/DeferralCount__c.field-meta.xml
<CustomField>
    <fullName>DeferralCount__c</fullName>
    <label>Deferral Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>