force-app/main/default/objects/OrderSummaryRoutingSchedule/fields/OrderDeliveryGroupSummaryId__c.field-meta.xml
<CustomField>
    <fullName>OrderDeliveryGroupSummaryId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Order Delivery Group Summary Id</label>
    <referenceTo>OrderDeliveryGroupSummary</referenceTo>
    <relationshipLabel>Order Summary Routing Schedules</relationshipLabel>
    <relationshipName>OrderSummaryRoutingSchedules</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>