force-app/main/default/objects/OrderSummaryRoutingSchedule/fields/OutboundConnectionFailedAttempts__c.field-meta.xml
<CustomField>
    <fullName>OutboundConnectionFailedAttempts__c</fullName>
    <label>Outbound Connection Failed Attempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>